--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@thirdweb-dev/react": "^2.0.4",
     "@thirdweb-dev/sdk": "^2.0.26",
     "ethers": "^5.6.2",
+    "firebase": "^9.6.10",
     "next": "latest",
+    "next-auth": "^4.3.1",
     "next-sanity": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
