--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@sanity/image-url": "^1.0.1",
     "@thirdweb-dev/react": "^2.0.4",
     "@thirdweb-dev/sdk": "^2.0.26",
+    "@types/nodemailer": "^6.4.4",
+    "axios": "^0.26.1",
     "ethers": "^5.6.2",
     "firebase": "^9.6.10",
     "next": "latest",
     "next-auth": "^4.3.1",
     "next-sanity": "^0.5.1",
+    "nodemailer": "^6.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
